samples/_failures_safe/1761045236_0188f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0dcd1b4.c:156:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 | struct Token peek_token
      |        ^~~~~
